kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-app-deployment
  template:
    metadata:
      labels:
        app: api-app-deployment
    spec:
      containers:
        - name: api-app
          image: api-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 7777
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: api-app-service
spec:
  type: LoadBalancer
  ports:
    - port: 7777
      targetPort: 7777
      protocol: TCP
  selector:
    app: api-app-deployment
