kubernetes/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-app-deployment
  template:
    metadata:
      labels:
        app: ui-app-deployment
    spec:
      containers:
        - name: ui-app
          image: ui-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 7778
---
apiVersion: v1
kind: Service
metadata:
  name: ui-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 7778
    targetPort: 7778
    protocol: TCP
  selector:
    app: ui-app-deployment
