kubernetes/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: dab-project.io
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: ui-app-service
                port:
                  number: 7778
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: api-app-service
                port:
                  number: 7777
